Fixed - #528 - Chips Input: Long unbroken text doesn't wrap or overflow gracefully

--- a/apps/javascript/src/challenges/chips-input/style.css
+++ b/apps/javascript/src/challenges/chips-input/style.css
@@ -16,6 +16,8 @@ input {
   background-color: #eee;
   border: 1px solid lightgrey;
   border-radius: 1em;
+  word-break: break-word;
+  text-align: left;
 }
 
 .chip .remove {
@@ -29,5 +31,4 @@ input {
 
 .chip.finalized .remove {
   display: inherit;
-
 }
